--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,10 @@
 name: Build and push docker image
 
 on:
-  push:
-    branches:
-      - main
+   workflow_dispatch:
+ # push:
+    #branches:
+      #- main
 
 jobs:
   build:
